Refactor layout. Update public folder.

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -193,5 +193,10 @@
       }
     },
     "copyright": "Copyright © {{year}}."
+  },
+  "notFound": {
+    "title": "Page not found",
+    "description": "The page you were looking for does not exist.",
+    "goBack": "Go to homepage"
   }
 }
