--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -1,4 +1,5 @@
 {
+  "loading": "Cargando...",
   "skipToContent": "Ir al contenido",
   "header": {
     "navMenu": {
@@ -26,6 +27,10 @@
     "languageSwitcher": {
       "label": "Cambiar idioma",
       "options": { "en": "English", "es": "Español" }
+    },
+    "darkModeToggle": {
+      "toggleOn": "Cambiar a modo oscuro",
+      "toggleOff": "Cambiar a modo claro"
     }
   },
   "hero": {
